<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartGameActivity">

    <TextView
        android:id="@+id/game_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="171dp"
        android:text="@string/app_title"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/imageDiceRoller"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/app_title" />

    <ImageView
        android:id="@+id/imageDiceRoller"
        android:layout_width="371dp"
        android:layout_height="313dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.617"
        app:srcCompat="@drawable/dice1" />

    <TextView
        android:id="@+id/textViewPlayerTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageDiceRoller"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_title"
        tools:text="@string/player_turn1" />

    <TextView
        android:id="@+id/textViewCurrentPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="39dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageDiceRoller"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlayerTurn"
        android:text="@string/current_position"
        tools:text="@string/current_position" />

</androidx.constraintlayout.widget.ConstraintLayout>