<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintViewMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="24dp"
        android:text="@string/app_title"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberOfPlayers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/app_title" />

    <EditText
        android:id="@+id/editTextNumberOfPlayers"
        android:layout_width="175dp"
        android:layout_height="68dp"
        android:layout_marginTop="100dp"
        android:autoLink="none"
        android:autoText="false"
        android:ems="10"
        android:hint="@string/number_of_players"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonRefreshBT"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        tools:text="@string/number_of_players" />

    <ListView
        android:id="@+id/listViewBT"
        android:layout_width="413dp"
        android:layout_height="469dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberOfPlayers" />

    <Button
        android:id="@+id/buttonRefreshBT"
        android:layout_width="161dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="103dp"
        android:text="@string/refresh_button"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberOfPlayers"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        tools:text="@string/refresh_button" />

</androidx.constraintlayout.widget.ConstraintLayout>